# XpertCorpus

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: docs.yml
docs/: README.md  index.md
docs/api/: README.md
docs/api/frameworks/: README.md  xframe_pt.md
docs/api/microops/: README.md  remove_emails_microops.md  remove_emoji_microops.md  remove_emoticons_microops.md  remove_extra_spaces_microops.md  remove_footer_header_microops.md  remove_html_tags_microops.md  remove_non_printable_microops.md  remove_phone_numbers_microops.md  remove_special_chars_microops.md  remove_urls_microops.md
docs/api/operators/: README.md
docs/api/others/: README.md  xframework.md  xlimitor.md  xoperator.md  xpipeline.md  xregistry.md
docs/api/pipelines/: README.md  xcleaning_pipe.md
docs/api/utils/: README.md  vis_entry.md  xconfig.md  xerror_handler.md  xlogger.md  xstorage.md  xutils.md  xvis.md
docs/architecture/: README.md  data-flow.md  design-principles.md  four-layer-arch.md  registry-pattern.md
docs/development/: README.md  coding-standards.md  contributing.md  deployment.md  testing.md
docs/examples/: README.md
docs/examples/complex-pipelines/: README.md
docs/examples/custom-development/: README.md
docs/examples/simple-examples/: README.md
docs/reference/: README.md  configuration.md  error-codes.md  faq.md  performance.md
docs/tutorials/: README.md
docs/tutorials/advanced-usage/: README.md
docs/tutorials/basic-usage/: README.md
docs/tutorials/best-practices/: README.md
docs/tutorials/getting-started/: README.md
xpertcorpus/: main.py  version.py  vis.py
xpertcorpus/config/: config.yaml.template
xpertcorpus/examples/: error_handler_usage.py
xpertcorpus/modules/frameworks/: xframe_pt.py
xpertcorpus/modules/microops/: __init__.py  remove_emails_microops.py  remove_emoji_microops.py  remove_emoticons_microops.py  remove_extra_spaces_microops.py  remove_footer_header_microops.py  remove_html_tags_microops.py  remove_non_printable_microops.py  remove_phone_numbers_microops.py  remove_special_chars_microops.py  remove_urls_microops.py
xpertcorpus/modules/operators/: __init__.py  xllmcleaner.py  xplitter.py  xsplitter.py
xpertcorpus/modules/others/: xapi.py  xframework.py  xlimitor.py  xoperator.py  xpipeline.py  xprompts.py  xregistry.py
xpertcorpus/modules/pipelines/: xcleaning_pipe.py  xpipe_pt.py
xpertcorpus/utils/: __init__.py  xconfig.py  xerror_handler.py  xlogger.py  xstorage.py  xutils.py  xvis.py
