[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "XpertCorpus"
authors = [
    {name = "rookielittleblack", email = "rookielittleblack@yeah.net"},
]
description = "A lightweight end-to-end framework for large model corpus construction."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
keywords = ["AI", "LLM", "corpus", "text-processing"]
dynamic = ["version", "dependencies"]

[project.urls]
Homepage = "https://github.com/rookie-littleblack/XpertCorpus"
Repository = "https://github.com/rookie-littleblack/XpertCorpus"
Issues = "https://github.com/rookie-littleblack/XpertCorpus/issues"

[project.scripts]
xpertcorpus = "xpertcorpus.main:main"

[tool.setuptools]
packages = ["xpertcorpus"]

[tool.setuptools.package-data]
xpertcorpus = ["config/*.yaml"]

[tool.setuptools.dynamic]
version = {attr = "xpertcorpus.version.__version__"}
dependencies = {file = "requirements.txt"}
